clusters/cluster/apps/verein-ext/neuland-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuland-website
  namespace: verein-ext
spec:
  replicas: 1
  minReadySeconds: 3
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: neuland-website
  template:
    metadata:
      labels:
        app: neuland-website
    spec:
      containers:
        - name: neuland-website
          image: ghcr.io/neuland-ingolstadt/neuland-website:build-195 # {"$imagepolicy": "flux-system:neuland-website"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
